# rust-multicodec

./: .gitignore  Cargo.toml  README.md
src/: codec.rs  codec_map.rs  codec_prefix.rs  lib.rs  main.rs
src/encoding/: codec.rs  codec_map.rs
