[package]
name = "rust_multicodec"
version = "0.2.0"
authors = ["Muranyi Sandor <contact@mudlee.hu>"]
description = "Rust implementation of the multicodec specification."
repository = "https://github.com/mudlee/rust-multicodec"
keywords = ["multicodec", "multiformats"]
license = "AFL-2.0"

[dependencies]
integer-encoding = "1.0.5"
hex-slice = "0.1.0"
serde_json = "1.0.8"
serde = "1.0.24"
serde_derive = "1.0.24"